--- a/src/goods/templates/goods/good_detail.html
+++ b/src/goods/templates/goods/good_detail.html
@@ -2,18 +2,18 @@
 
 {% block title %}{{ object.name }} :: {{ block.super }}{% endblock %}
 
-{% block good_headline %}<a href="{% url 'goods:goods:detail' object.id %}">{{ object.name }}</a> :: {% endblock %}
+{% block good_headline %}<a href="{% url 'goods:detail' object.slug %}">{{ object.name }}</a> :: {% endblock %}
 
 {% block main %}
     {% with names=object.tags.names %}
         {% if names.count > 0 %}
             <p>Tags: {% for name in names %}{% if not forloop.first %}, {% endif %}
-                <a href="{% url 'goods:goods:list' %}{% query_builder request tags=name page=None cat_id=None %}">{{ name }}</a>
+                <a href="{% url 'goods:list' %}{% query_builder request tags=name page=None cat_id=None %}">{{ name }}</a>
             {% endfor %}</p>
             <br>
         {% endif %}
     {% endwith %}
     <p>{{ object.description|linebreaksbr }}</p>
     <p class="not-in-stock">{% if not object.in_stock %}Out of stock!{% endif %}</p>
-    <p><a href="{% url 'goods:goods:list' %}{% query_builder request %}">Back</a></p>
+    <p><a href="{% url 'goods:list' %}{% query_builder request %}">Back</a></p>
 {% endblock %}
