--- a/src/goods/templates/goods/good_form.html
+++ b/src/goods/templates/goods/good_form.html
@@ -3,7 +3,7 @@
 
 {% block title %}{{ headline }}{% if object %}{{ object.name }} :: {% endif %}{{ block.super }}{% endblock %}
 
-{% block good_headline %}{{ headline }}{% if object %}<a href="{% url 'goods:goods:detail' object.id %}">{{ object.name }}</a> :: {% endif %}{% endblock %}
+{% block good_headline %}{{ headline }}{% if object %}<a href="{% url 'goods:detail' object.slug %}">{{ object.name }}</a> :: {% endif %}{% endblock %}
 
 {% block main %}
     <div class='row'>
